# playground

./: README.md  aba.txt  bad.py  baz.py  dev.py  foo.py  prog.py  pyproject.toml  version
.devops/: checkout_template.yml  generate_workflow.py  manifest.json
.github/workflows/: blank.yml  checkout-matrix.yml  checkout.yml  checkout_manifest.yml  create_label.yml  create_pr.yml  generate_workflow.yml  lint.yml  pr_lint.yml  pr_title_verify.yml  ready_for_merge.yml  release.yml  test_lint.py  test_lint.yml
poetry_demo/: python2.py  run_python.py
tests/: test_foo.py
